added login form into index.html, and a css file

--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,17 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="/css/styles.css">
     <title>log In page</title>
   </head>
   <body>
-    log In here
+    <h1>Log In</h1>
+    <form  action="logIn" method="post">
+      Your Name : <input type="text" name="userName" >
+      <br><br>
+      Your Password : <input type="password" name="password" >
+      <br><br>
+      <button type="button" name="button">login</button>
+    </form>
   </body>
 </html>
