--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,12 @@
   </head>
   <body>
     <h1>Log In</h1>
-    <form  action="logIn" method="post">
+    <form  action="/logIn" method="POST">
       Your Name : <input type="text" name="userName" >
       <br><br>
       Your Password : <input type="password" name="password" >
       <br><br>
-      <button type="button" name="button">login</button>
+      <button>login</button>
     </form>
   </body>
 </html>
