--- a/public/homePage.html
+++ b/public/homePage.html
@@ -2,9 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <script type="text/javascript" src="js/homePage.js">
+
+    </script>
     <title>home Page</title>
   </head>
-  <body>
-    this is a home page
+  <body onload="loadToDo()">
+      <a id="logOut" href="/logOut">logOut</a>
+      <h3>Your To Do Lists</h3>
   </body>
 </html>
