created a page for new todo, and accepting new todo

--- a/public/homePage.html
+++ b/public/homePage.html
@@ -9,6 +9,8 @@
   </head>
   <body onload="loadToDo()">
       <a id="logOut" href="/logOut">logOut</a>
-      <h3>Your To Do Lists</h3>
+
+      <h3><a href="/createNewToDo.html">Create New To DO</a></h3>
+      <h3>Your Previous To Do Lists</h3>
   </body>
 </html>
