--- a/public/homePage.html
+++ b/public/homePage.html
@@ -2,14 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="/css/styles.css">
     <script type="text/javascript" src="js/homePage.js">
-
     </script>
     <title>home Page</title>
   </head>
   <body onload="loadToDo()">
-      <a id="logOut" href="/logOut">logOut</a>
-
+      <h3><a id="logOut" href="/logOut">logOut</a></h3>
       <h3><a href="/createNewToDo.html">Create New To DO</a></h3>
       <h3>Your Previous To Do Lists</h3>
   </body>
