added a todo templet and showing title of to do and the desription of to do

--- a/public/createNewToDo.html
+++ b/public/createNewToDo.html
@@ -12,7 +12,7 @@
     <h3><a id="logOut" href="/logOut">Logout</a></h3>
     <form action="/newToDo" method="POST">
       title : <input type="text" name="title" ><br><br>
-      discription : <textarea type="text" name="discription" ></textarea><br><br>
+      description : <textarea type="text" name="description" ></textarea><br><br>
       <button type="submit" name="submit">submit To Do</button><br><br>
     </form>
     <button id="addItem" onclick="getTextBox()">add Item</button><br><br>
