showing previous todo, and gave edit todo button which will give textAreas to edit title and description

--- a/public/createNewToDo.html
+++ b/public/createNewToDo.html
@@ -9,7 +9,8 @@
   </head>
   <body>
     <h2>enter new To Do</h2>
-    <h3><a id="logOut" href="/logOut">Logout</a></h3>
+    <h3><a class="options" href="/logOut">Logout</a></h3>
+    <h3><a class="options" href="/homePage.html">Home</a></h3>
     <form action="/newToDo" method="POST">
       title : <input type="text" name="title" ><br><br>
       description : <textarea type="text" name="description" ></textarea><br><br>
