--- a/public/homePage.html
+++ b/public/homePage.html
@@ -8,7 +8,7 @@
     <title>home Page</title>
   </head>
   <body onload="loadToDo()">
-      <h3><a id="logOut" href="/logOut">logOut</a></h3>
+      <h3><a class="options" href="/logOut">logOut</a></h3>
       <h3><a href="/createNewToDo.html">Create New To DO</a></h3>
       <h3>Your Previous To Do Lists</h3>
   </body>
