In todo , on clicking button , giving text area to title, description and alll items and hiding the edit button

--- a/public/toDoTemplet.html
+++ b/public/toDoTemplet.html
@@ -15,7 +15,7 @@
     <h3><a class="options" href="/logOut">logOut</a></h3>
     <h3><a class="options" href="/homePage.html">Home</a></h3>
     <p><b>Description : </b></p><p id="description">DESCRIPTION</p>
-    <button  onclick="getEditingOption()"> edit To Do</button>
+    <button id="editButton" class="options" onclick="getEditingOption()"> edit To Do</button>
     <br><br>
 
   </body>
