--- a/public/toDoTemplet.html
+++ b/public/toDoTemplet.html
@@ -13,18 +13,19 @@
 </head>
 
 <body onload="showItems()">
-  <h3><a class="options" href="/logOut">logOut</a></h3>
-  <h3><a class="options" href="/homePage.html">Home</a></h3><br>
-  <button id="editButton" class="options" onclick="getEditingOption()"> edit To Do</button>
+  <a class="options" href="/logOut">logOut</a>
+  <a class="options" href="/homePage.html">Home</a>
+  <br><br><br>
   <form class="" action="/editToDo/" method="post">
     <button id="submitButton" name="submit" class="hide">submit changes</button>
-    <h1>Title : </h1>
-    <h1 id="title">TODOTITLE</h1>
+    <h1>Title :<span id="title">TODOTITLE</span> </h1>
     <p><b>Description : </b></p>
     <p id="description">DESCRIPTION</p>
     <br><br>
 
   </form>
+  <button id="editButton" class="options" onclick="getEditingOption()"> edit To Do</button>
+  <h3><a id="deleteOption" class="options" href="/delete/TODOTITLE">Delete To Do</a></h3><br>
 </body>
 
 </html>
