--- a/public/toDoTemplet.html
+++ b/public/toDoTemplet.html
@@ -15,14 +15,16 @@
 <body onload="showItems()">
   <a class="options" href="/logOut">logOut</a>
   <a class="options" href="/homePage.html">Home</a>
-  <br><br><br>
-  <form class="" action="/editToDo/" method="post">
-    <button id="submitButton" name="submit" class="hide">submit changes</button>
+  <br><br>
+  <form class="" action="/editToDo/TODOTITLE" method="post">
     <h1>Title :<span id="title">TODOTITLE</span> </h1>
     <p><b>Description : </b></p>
     <p id="description">DESCRIPTION</p>
     <br><br>
+    <ol class="todoItems">
 
+    </ol>
+    <button id="submitButton" class="hide">submit changes</button>
   </form>
   <button id="editButton" class="options" onclick="getEditingOption()"> edit To Do</button>
   <h3><a id="deleteOption" class="options" href="/delete/TODOTITLE">Delete To Do</a></h3><br>
