--- a/public/createNewToDo.html
+++ b/public/createNewToDo.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h2>enter new To Do</h2>
-    <h3><a class="options" href="/logOut">Logout</a></h3>
+    <h3><a class="options" href="/logout">logout</a></h3>
     <h3><a class="options" href="/homePage.html">Home</a></h3>
     <form action="/newToDo" method="POST">
       title : <input type="text" name="title" ><br><br>
